Criando tela de Cadastro/Editar para livro

--- a/biblioteca/app/views/authors/index.html.erb
+++ b/biblioteca/app/views/authors/index.html.erb
@@ -17,7 +17,7 @@
   <tr>
     <td><%= author.id %></td>
     <td><%= author.name %></td>
-    <td><%= author.birthdate %></td>
+    <td><%= author.birthdate.strftime("%m/%d/%Y") %></td>
     <td><%= link_to "Detalhes", author_path(author.id) %></td>
     <td><%= link_to "Editar", edit_author_path(author.id) %></td>
     <td><%= link_to "Deletar", author_path(author.id), method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?"} %></td>
