--- a/biblioteca/app/views/authors/_form.html.erb
+++ b/biblioteca/app/views/authors/_form.html.erb
@@ -10,15 +10,15 @@
 
 <%= form_for @author, html: { class: 'form-horizontal' } do |f| %>
 <div class="form-group">
-  <%= f.label :name, "Nome", class: "col-sm-3 control-label" %>
+  <%= f.label :name, "Nome:", class: "col-sm-3 control-label" %>
   <div class="col-sm-9">
     <%= f.text_field :name, class: 'form-control' %>
   </div>
 </div>
 
 <div class="form-group">
-  <%= f.label :birthdate, "Data de nascimento", class: "col-sm-3 control-label" %>
-  <div class="col-sm-9">
+  <%= f.label :birthdate, "Data de nascimento:", class: "col-sm-3 control-label" %>
+  <div class="col-sm-2">
     <%= f.date_field :birthdate, class: 'form-control' %>
   </div>
 </div>
