--- a/biblioteca/app/views/authors/index.html.erb
+++ b/biblioteca/app/views/authors/index.html.erb
@@ -11,16 +11,16 @@
     <th>#</th>
     <th>Nome</th>
     <th>Data de Nascimento</th>
-    <th></th>
+    <th>Ações</th>
   </tr>
   <% @authors.each do |author| %>
   <tr>
     <td><%= author.id %></td>
     <td><%= author.name %></td>
     <td><%= author.birthdate.strftime("%m/%d/%Y") %></td>
-    <td><%= link_to "Detalhes", author_path(author.id) %></td>
-    <td><%= link_to "Editar", edit_author_path(author.id) %></td>
-    <td><%= link_to "Deletar", author_path(author.id), method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?"} %></td>
+    <td><%= link_to "Detalhes", author_path(author.id), class: 'btn btn-xs btn-success' %>
+        <%= link_to "Editar", edit_author_path(author.id), class: 'btn btn-xs btn-primary' %>
+        <%= link_to "Deletar", author_path(author.id), class: 'btn btn-xs btn-danger', method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?"} %></td>
   </tr>
   <% end %>
 </table>
