--- a/biblioteca/app/views/authors/show.html.erb
+++ b/biblioteca/app/views/authors/show.html.erb
@@ -9,3 +9,9 @@
   <% end %>
   </ul>
 <% end %>
+
+<div class="form-group">
+  <div class="col-sm-12">
+    <%= link_to "Voltar", authors_path, class: "btn btn-default" %>
+  </div>
+</div>
