--- a/biblioteca/app/views/books/index.html.erb
+++ b/biblioteca/app/views/books/index.html.erb
@@ -1,20 +1,29 @@
 <h1>Lista de Livros</h1>
 
-<%= form_tag books_path, method: :get do %>
-  <%= text_field_tag :search %>
-  <%= submit_tag "Pesquisar" %>
-<% end %>
-
-<% if params[:search].present? %>
-  <div class="row">
-    <div class="alert alert-success">
-      <%= @books.size %> Resultados Encontrados.
+<div class="col-sm-6">
+  <%= form_tag books_path, method: :get do %>
+    <div class="input-group">
+      <%= text_field_tag :search, params[:search], class: 'form-control' %>
+      <span class="input-group-btn">
+        <%= submit_tag "Pesquisar", class: "btn btn-primary" %>
+      </span>
     </div>
+  <% end %>
 </div>
-<% end %>
+
+<div class="row">
+  <% if params[:search].present? %>
+    <div class="col-sm-12">
+      <div class="alert alert-success">
+        <%= @books.size %> Resultados Encontrados.
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <table class="table table-striped">
   <tr>
+    <th>Id</th>
     <th>Titulo</th>
     <th>Ano de Publicação</th>
     <th>Autor</th>
@@ -23,6 +32,7 @@
 
   <% @books.each do |book| %>
   <tr>
+    <td><%= book.id %></td>
     <td><%= book.title %></td>
     <td><%= book.publication_year %></td>
     <td><%= link_to book.author.name, author_path(book.author.id) %></td>
