Alterações da Aula do dia 29/07/2017
Adicionando Pesquisa e paginando a pagina

--- a/biblioteca/app/views/books/index.html.erb
+++ b/biblioteca/app/views/books/index.html.erb
@@ -43,4 +43,8 @@
   <% end %>
 </table>
 
+<div class="row">
+  <%= will_paginate @books %>
+</div>
+
 <%= link_to "Novo Livro", new_book_path, class: "btn btn-primary" %>
