--- a/biblioteca/app/views/authors/index.html.erb
+++ b/biblioteca/app/views/authors/index.html.erb
@@ -1,17 +1,25 @@
 <h1>Lista de Autores</h1>
 
-<%= form_tag authors_path, method: :get do %>
-  <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag "Pesquisar" %>
-<% end %>
-
-<% if params[:search].present? %>
-  <div class="row">
-    <div class="alert alert-success">
-      <%= @authors.size %> Resultados Encontrados.
+<div class="col-sm-6">
+  <%= form_tag authors_path, method: :get do %>
+    <div class="input-group">
+      <%= text_field_tag :search, params[:search], class: 'form-control' %>
+      <span class="input-group-btn">
+        <%= submit_tag "Pesquisar", class: "btn btn-primary" %>
+      </span>
     </div>
+  <% end %>
 </div>
-<% end %>
+
+<div class="row">
+  <% if params[:search].present? %>
+    <div class="col-sm-12">
+      <div class="alert alert-success">
+        <%= @authors.size %> Resultados Encontrados.
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <% if flash[:notice] %>
 <div class="alert alert-success">
@@ -37,5 +45,9 @@
   </tr>
   <% end %>
 </table>
+
+<div class="row">
+  <%= will_paginate @authors %>
+</div>
 
 <%= link_to "Novo autor", new_author_path, class: "btn btn-primary" %>
