--- a/biblioteca/app/views/books/_form.html.erb
+++ b/biblioteca/app/views/books/_form.html.erb
@@ -31,6 +31,13 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :resume, "Resumo:", class: 'col-sm-3 control-label' %>
+    <div class="col-sm-2">
+      <%= f.text_area :resume, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <div class="col-sm-12 col-sm-offset-3">
       <%= f.submit "Salvar", class: "btn btn-primary" %>
       <%= link_to "Voltar", books_path, class: "btn btn-default" %>
