--- a/biblioteca/app/views/books/show.html.erb
+++ b/biblioteca/app/views/books/show.html.erb
@@ -2,6 +2,7 @@
 
 <p>Autor: <%= @book.author.name %> </p>
 <p>Ano de Publicação: <%= @book.publication_year %> </p>
+<p>Resumo: <%= @book.resume %> </p>
 
 <div class="form-group">
   <div class="col-sm-12">
