--- a/biblioteca/app/views/books/show.html.erb
+++ b/biblioteca/app/views/books/show.html.erb
@@ -3,6 +3,7 @@
 <p>Autor: <%= @book.author.name %> </p>
 <p>Ano de Publicação: <%= @book.publication_year %> </p>
 <p>Resumo: <%= @book.resume %> </p>
+<p>Total de Paginas: <%= @book.total_pages %> </p>
 
 <div class="form-group">
   <div class="col-sm-12">
