--- a/biblioteca/app/views/books/show.html.erb
+++ b/biblioteca/app/views/books/show.html.erb
@@ -4,6 +4,7 @@
 <p>Ano de Publicação: <%= @book.publication_year %> </p>
 <p>Resumo: <%= @book.resume %> </p>
 <p>Total de Paginas: <%= @book.total_pages %> </p>
+<p>Imagem da Capa: <%= image_tag @book.cover %> </p>
 
 <div class="form-group">
   <div class="col-sm-12">
