--- a/biblioteca/app/views/authors/show.html.erb
+++ b/biblioteca/app/views/authors/show.html.erb
@@ -9,6 +9,7 @@
   <% end %>
   </ul>
 <% end %>
+<p>Foto do Autor: <%= image_tag @author.photo.url(:thumb) %> </p>
 
 <div class="form-group">
   <div class="col-sm-12">
