--- a/biblioteca/app/views/books/index.html.erb
+++ b/biblioteca/app/views/books/index.html.erb
@@ -47,4 +47,6 @@
   <%= will_paginate @books %>
 </div>
 
-<%= link_to "Novo Livro", new_book_path, class: "btn btn-primary" %>
+<% if can?(:books, :new) %>
+  <%= link_to "Novo Livro", new_book_path, class: "btn btn-primary" %>
+<% end %>
