Adicionando cadastro de Reservas

--- a/biblioteca/app/views/authors/index.html.erb
+++ b/biblioteca/app/views/authors/index.html.erb
@@ -41,7 +41,8 @@
     <td><%= author.birthdate.strftime("%m/%d/%Y") %></td>
     <td><%= link_to "Detalhes", author_path(author.id), class: 'btn btn-xs btn-success' %>
         <%= link_to "Editar", edit_author_path(author.id), class: 'btn btn-xs btn-primary' %>
-        <%= link_to "Deletar", author_path(author.id), class: 'btn btn-xs btn-danger', method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?"} %></td>
+        <%= link_to "Deletar", author_path(author.id), class: 'btn btn-xs btn-danger', method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?"} %>
+    </td>
   </tr>
   <% end %>
 </table>
