--- a/biblioteca/app/views/authors/_form.html.erb
+++ b/biblioteca/app/views/authors/_form.html.erb
@@ -32,7 +32,7 @@
 </div>
 
 <div class="form-group">
-  <div class="col-sm-12">
+  <div class="col-sm-12 col-sm-offset-3">
     <%= f.submit "Salvar", class: "btn btn-primary" %>
     <%= link_to "Voltar", authors_path, class: "btn btn-default" %>
   </div>
