--- a/biblioteca/app/views/authors/index.html.erb
+++ b/biblioteca/app/views/authors/index.html.erb
@@ -21,11 +21,7 @@
   <% end %>
 </div>
 
-<% if flash[:notice] %>
-<div class="alert alert-success">
-  <%= flash[:notice] %>
-</div>
-<% end %>
+<div class="alert" style="display: none"></div>
 
 <table class="table table-striped">
   <tr>
@@ -35,21 +31,22 @@
     <th>Ações</th>
   </tr>
   <% @authors.each do |author| %>
-  <tr>
+  <tr id="author-<%= author.id %>">
     <td><%= author.id %></td>
     <td><%= author.name %></td>
     <td><%= author.birthdate.strftime("%m/%d/%Y") %></td>
     <td><%= link_to "Detalhes", author_path(author.id), class: 'btn btn-xs btn-success' %>
         <%= link_to "Editar", edit_author_path(author.id), class: 'btn btn-xs btn-primary' %>
-        <%= link_to "Deletar", author_path(author.id), class: 'btn btn-xs btn-danger', method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?"} %>
+        <%= link_to "Deletar", author_path(author.id), class: 'btn btn-xs btn-danger', method: :delete, data: {confirm: "Voce realmente deseja apagar este autor?", remote: true } %>
     </td>
   </tr>
   <% end %>
 </table>
 
 <div class="row">
-  <%= will_paginate @authors %>
+  <%= will_paginate @authors, renderer: BootstrapPagination::Rails %>
 </div>
+
 <% if can?(:authors, :new) %>
   <%= link_to "Novo autor", new_author_path, class: "btn btn-primary" %>
 <% end %>
