--- a/biblioteca/app/views/bookings/_form.html.erb
+++ b/biblioteca/app/views/bookings/_form.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="form-group">
-    <div class="col-sm-12">
+    <div class="col-sm-12 col-sm-offset-2">
       <%= f.submit "Salvar", class: 'btn btn-primary' %>
       <%= link_to "Voltar", bookings_path, class: "btn btn-default" %>
     </div>
