--- a/biblioteca/app/views/bookings/index.html.erb
+++ b/biblioteca/app/views/bookings/index.html.erb
@@ -1,4 +1,24 @@
 <h1>Lista de Reservas</h1>
+<div class="col-sm-6">
+  <%= form_tag bookings_path, method: :get do %>
+    <div class="input-group">
+      <%= text_field_tag :search, params[:search], class: 'form-control' %>
+      <span class="input-group-btn">
+        <%= submit_tag "Pesquisar", class: "btn btn-primary" %>
+      </span>
+    </div>
+  <% end %>
+</div>
+
+<div class="row">
+  <% if params[:search].present? %>
+    <div class="col-sm-12">
+      <div class="alert alert-success">
+        <%= @bookings.size %> Resultados Encontrados.
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <table class="table table-striped">
   <tr>
