Alteração no projeto Doador Online

--- a/doadoronline/app/views/home/index.html.erb
+++ b/doadoronline/app/views/home/index.html.erb
@@ -1,2 +1,62 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h2 class="text-center">QUEM PODE DOAR</h2>
+
+<div class="col-sm-4">
+  <div class="panel panel-primary">
+    <div class="panel-heading">O QUE É PRECISO PARA DOAR</div>
+    <div class="panel-body">
+      <p class="text-justify">
+        Ter entre 16 (Termo de Consentimento assinado pelo responsável legal, com xerox da identidade) e 69 anos
+        Pesar a partir de 50 kg
+        Estar saudável e alimentado
+        Apresentar documento oficial com foto
+      </p>
+
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-4">
+  <div class="panel panel-primary">
+    <div class="panel-heading">QUEM NÃO PODE DOAR</div>
+    <div class="panel-body">
+      <p class="text-justify">
+        Quem teve hepatite após os 11 anos de idade
+        Mulheres grávidas ou em amamentação exclusiva
+        Quem passou por cirurgia cardíaca
+        Quem teve câncer
+        Quem teve relações sexuais com múltiplos parceiros nos últimos 12 meses
+        Usuários de drogas
+        Pessoas com HIV, hepatite, sífilis e doença de Chagas
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-4">
+  <div class="panel panel-primary">
+    <div class="panel-heading">ANTES DE DOAR</div>
+    <div class="panel-body">
+      <p class="text-justify">
+        Dormir bem a noite anterior à doação
+        Não ingerir bebida alcoólica nas últimas 12 horas antes da doação
+        Alimentar-se bem, evitando alimento gorduroso
+        Aguardar 2 horas após o almoço, para doar
+        Não fumar 2 horas antes e 2 depois da doação
+        Procurar ficar tranquilo e relaxar
+      </p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-sm-12">
+  <div class="panel panel-danger">
+    <div class="panel-heading">Importante</div>
+    <div class="panel-body">
+      O Hemocentro não é um centro de diagnóstico, mas sim de triagem, portanto,
+      podem acontecer casos de exames falso-positivos e o doador ser convocado a
+      coletar uma segunda amostra de sangue para repetição de exames.
+      A sinceridade nas respostas ao profissional da triagem clínica é essencial para a qualidade da transfusão.
+    </div>
+  </div>
+</div>
