--- a/doadoronline/app/views/layouts/application.html.erb
+++ b/doadoronline/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Doadoronline</title>
+    <title>DoadorOnline</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <%= render "shared/menu" %>
+
+    <div class="container" style="margin-top: 60px">
+      <%= yield %>
+    </div>
+
+    <%= render "shared/footer" %>
+
   </body>
 </html>
