Conclusão do projeto Doador Online

--- a/doadoronline/app/views/home/index.html.erb
+++ b/doadoronline/app/views/home/index.html.erb
@@ -1,62 +1,154 @@
-<h2 class="text-center">QUEM PODE DOAR</h2>
+<section class="content">
+  <div class="row">
+    <div class="col-md-12">
+      <section class="content-header">
+        <ol class="breadcrumb">
+          <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+        </ol>
+      </section>
 
-<div class="col-sm-4">
-  <div class="panel panel-primary">
-    <div class="panel-heading">O QUE É PRECISO PARA DOAR</div>
-    <div class="panel-body">
-      <p class="text-justify">
-        Ter entre 16 (Termo de Consentimento assinado pelo responsável legal, com xerox da identidade) e 69 anos
-        Pesar a partir de 50 kg
-        Estar saudável e alimentado
-        Apresentar documento oficial com foto
-      </p>
+      <!-- Horizontal Form -->
+      <div class="box box-info">
+        <div class="box-header with-border">
+          <h3 class="box-title">Quem Pode Doar</h3>
+        </div>
+
+        <div class="col-md-4">
+          <!-- Widget: user widget style 1 -->
+          <div class="box box-widget widget-user">
+            <!-- Add the bg color to the header using any of the bg-* classes -->
+            <div class="widget-user-header bg-aqua-active">
+              <h4 class="widget-user-username"></h4>
+            </div>
+            <div class="widget-user-image">
+              <%= image_tag "doasanguemais.jpg", class: "img-circle", alt: "User Avatar" %>
+            </div>
+            <div class="box-footer">
+              <div class="row">
+                <div class="col-sm-12 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">O QUE É PRECISO PARA DOAR</h5>
+                    <span class="description-text">
+                      <p class="text-justify">
+                        Ter entre 16 (Termo de Consentimento assinado pelo responsável legal, com xerox da identidade) e 69 anos
+                        Pesar a partir de 50 kg
+                        Estar saudável e alimentado
+                        Apresentar documento oficial com foto
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                      </p>
+                    </span>
+                  </div>
+                  <!-- /.description-block -->
+                </div>
+
+              </div>
+              <!-- /.row -->
+            </div>
+            <div class="box-footer_2">
+              <div class="row"></div>
+            </div>
+          </div>
+          <!-- /.widget-user -->
+        </div>
+
+        <div class="col-md-4">
+          <!-- Widget: user widget style 1 -->
+          <div class="box box-widget widget-user">
+            <!-- Add the bg color to the header using any of the bg-* classes -->
+            <div class="widget-user-header bg-aqua-active">
+              <h4 class="widget-user-username"></h4>
+            </div>
+            <div class="widget-user-image">
+              <%= image_tag "doasanguevida.jpg", class: "img-circle", alt: "User Avatar" %>
+            </div>
+            <div class="box-footer">
+              <div class="row">
+                <div class="col-sm-12 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">QUEM NÃO PODE DOAR</h5>
+                    <span class="description-text">
+                      <p class="text-justify">
+                        Quem teve hepatite após os 11 anos de idade
+                        Mulheres grávidas ou em amamentação exclusiva
+                        Quem passou por cirurgia cardíaca
+                        Quem teve câncer
+                        Quem teve relações sexuais com múltiplos parceiros nos últimos 12 meses
+                        Usuários de drogas
+                        Pessoas com HIV, hepatite, sífilis e doença de Chagas
+                      </p>
+                    </span>
+                  </div>
+                  <!-- /.description-block -->
+                </div>
+
+              </div>
+              <!-- /.row -->
+            </div>
+            <div class="box-footer_2">
+              <div class="row"></div>
+            </div>
+          </div>
+          <!-- /.widget-user -->
+        </div>
+
+        <div class="col-md-4">
+          <!-- Widget: user widget style 1 -->
+          <div class="box box-widget widget-user">
+            <!-- Add the bg color to the header using any of the bg-* classes -->
+            <div class="widget-user-header bg-aqua-active">
+              <h4 class="widget-user-username"></h4>
+            </div>
+            <div class="widget-user-image">
+              <%= image_tag "doesangue.png", class: "img-circle", alt: "User Avatar" %>
+            </div>
+            <div class="box-footer">
+              <div class="row">
+                <div class="col-sm-12 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">ANTES DE DOAR</h5>
+                    <span class="description-text">
+                      <p class="text-justify">
+                        Dormir bem a noite anterior à doação
+                        Não ingerir bebida alcoólica nas últimas 12 horas antes da doação
+                        Alimentar-se bem, evitando alimento gorduroso
+                        Aguardar 2 horas após o almoço, para doar
+                        Não fumar 2 horas antes e 2 depois da doação
+                        Procurar ficar tranquilo e relaxar
+                        <br>
+                        <br>
+                      </p>
+                    </span>
+                  </div>
+                  <!-- /.description-block -->
+                </div>
+
+              </div>
+              <!-- /.row -->
+            </div>
+            <div class="box-footer_2">
+              <div class="row"></div>
+            </div>
+          </div>
+          <!-- /.widget-user -->
+        </div>
+
+        <div class="col-sm-12">
+          <div class="panel panel-danger">
+            <div class="panel-heading">Importante</div>
+            <div class="panel-body">
+              O Hemocentro não é um centro de diagnóstico, mas sim de triagem, portanto,
+              podem acontecer casos de exames falso-positivos e o doador ser convocado a
+              coletar uma segunda amostra de sangue para repetição de exames.
+              A sinceridade nas respostas ao profissional da triagem clínica é essencial para a qualidade da transfusão.
+            </div>
+          </div>
+        </div>
+
+      </div>
 
     </div>
   </div>
-</div>
-
-<div class="col-sm-4">
-  <div class="panel panel-primary">
-    <div class="panel-heading">QUEM NÃO PODE DOAR</div>
-    <div class="panel-body">
-      <p class="text-justify">
-        Quem teve hepatite após os 11 anos de idade
-        Mulheres grávidas ou em amamentação exclusiva
-        Quem passou por cirurgia cardíaca
-        Quem teve câncer
-        Quem teve relações sexuais com múltiplos parceiros nos últimos 12 meses
-        Usuários de drogas
-        Pessoas com HIV, hepatite, sífilis e doença de Chagas
-      </a>
-    </div>
-  </div>
-</div>
-
-<div class="col-sm-4">
-  <div class="panel panel-primary">
-    <div class="panel-heading">ANTES DE DOAR</div>
-    <div class="panel-body">
-      <p class="text-justify">
-        Dormir bem a noite anterior à doação
-        Não ingerir bebida alcoólica nas últimas 12 horas antes da doação
-        Alimentar-se bem, evitando alimento gorduroso
-        Aguardar 2 horas após o almoço, para doar
-        Não fumar 2 horas antes e 2 depois da doação
-        Procurar ficar tranquilo e relaxar
-      </p>
-    </div>
-  </div>
-</div>
-
-
-<div class="col-sm-12">
-  <div class="panel panel-danger">
-    <div class="panel-heading">Importante</div>
-    <div class="panel-body">
-      O Hemocentro não é um centro de diagnóstico, mas sim de triagem, portanto,
-      podem acontecer casos de exames falso-positivos e o doador ser convocado a
-      coletar uma segunda amostra de sangue para repetição de exames.
-      A sinceridade nas respostas ao profissional da triagem clínica é essencial para a qualidade da transfusão.
-    </div>
-  </div>
-</div>
+</section>
