--- a/doadoronline/app/assets/stylesheets/application.scss
+++ b/doadoronline/app/assets/stylesheets/application.scss
@@ -10,8 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require jquery-ui
  *= require_tree .
  *= require_self
  *= require font-awesome
  */
- @import "bootstrap"
+ @import "bootstrap";
+ @import "style";
